--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ textarea{
     font-size: 17px;
     font-family: Segoe UI;
     font-weight: 600;
-    color: rgb(255, 168, 6);
+    color: rgb(0,191,255);
     display: all;
 }
 textarea:focus{
